@@ -3272,9 +3272,6 @@ progress_timer (void *    data,
 			bored = TRUE;
 	}
 
-	/* Clear anything on usplash right now */
-	usplash_write ("CLEAR");
-
 	if (num_fscks) {
 		int  blips = 0;
 		char progress[61];
@@ -3301,6 +3298,7 @@ progress_timer (void *    data,
 
 		/* Now we do something prettier for the splash screen */
 		start_usplash ();
+		usplash_write ("CLEAR");
 		usplash_write ("TIMEOUT 0");
 		usplash_write ("VERBOSE on");
 		usplash_write ("TEXT Filesystem checks are in progress:");
@@ -3386,7 +3384,6 @@ progress_timer (void *    data,
 		}
 		if (splash
 		    && (displaying_progress || displaying_bored)) {
-			usplash_write ("CLEAR");
 			usplash_write ("TIMEOUT 60");
 			usplash_write ("ESCAPE 0");
 		}
